<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/impostor_chooser"
        android:textColor="#D80005"
        android:textAlignment="center"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/numInLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numberOfPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:hint="@string/enter_the_number_of_players"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/setCountBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:text="@string/set" />
    </LinearLayout>

    <ImageView
        android:layout_width="251dp"
        android:layout_height="195dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/among_us_no_copyright" />


    <TextView
        android:id="@+id/roleStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/no_role_chosen"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/infoInput"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tinField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="8dp"
                android:imeOptions="actionDone"
                android:inputType="text|textCapCharacters"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/chooseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/choose_role" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/reset_for_next_player" />

        <Button
            android:id="@+id/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all_player" />

    </LinearLayout>
</LinearLayout>
